;# Metadata: Information about the package, used by package managers.
;[metadata]
;name = biosim
;
;# Obtain version and author info from package,
;# usually defined in __init__.py
;version = attr: biosim.__version__
;author = attr: biosim.__author__
;author_email = attr: biosim.__email__
;
;# Provide description, long version picked up from file.
;description = A simulation of a simplified ecosystem on an island
;long_description = file: README.md
;long_description_content_type = text/markdown
;
;# Homepage for package and specific URLs              NOTE: CHANGE THESE                 NOTE: CHANGE THESE
;url = https://gitlab.com/nmbu.no/emner/inf200/h2022/inf200-course-materials
;project_urls =
;    Bug Tracker = https://gitlab.com/nmbu.no/emner/inf200/h2022/inf200-course-materials/-/issues
;
;# License information
;license = MIT License
;
;# Classifiers, for options, see https://pypi.org/classifiers/
;classifiers =
;    Programming Language :: Python :: 3
;    License :: OSI Approved :: MIT License
;    Operating System :: OS Independent
;    Development Status :: 4 - Beta
;    Environment :: Console
;    Intended Audience :: Science/Research
;    Topic :: Scientific/Engineering
;
;# More information about requirements
;[options]
;# Python version required
;python_requires = >=3.11
;
;# Other packages required (eg numpy, pandas, ...)
;# Do NOT list packages from the Python Standard Library
;#    https://docs.python.org/3.11/library/index.html
;install_requires =
;    numpy
;    scipy
;    matplotlib
;    tkinter
;
;# Which packages to include: tell packaging mechanism to search in src
;package_dir =
;    = src
;packages = find:
;
;# Scripts to also include in distribution package
;scripts =
;    examples/ex_01_movie.py
;    examples/example_simulation.py
;    examples/example_with_gui.py
;
;# Tell package-finding mechanism where to search
;[options.packages.find]
;where = src
;
;# Tell our PEP8 checker that we allow 100 character lines
;[flake8]
;max-line-length = 100
;
;# Other configuration information could follow here
[metadata]
name = biosim
version = attr: biosim.__version__
license = MIT License
description = A simulation of a simplified ecosystem on an island
long_description = file: README.md
author = attr: biosim.__author__
author_email = attr: biosim.__email__
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib
    tk

[options.packages.find]
where=src

[flake8]
max-line-length = 100