[metadata]
name = biosim
version = attr: biosim.__version__
license = MIT License
description = A simulation of a simplified ecosystem on an island
long_description = file: README.md
author = attr: biosim.__author__
author_email = attr: biosim.__email__
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.11
packages = find:
package_dir =
    =src

scripts =
    examples/example_save_movie.py
    examples/example_simulation.py
    examples/example_with_gui.py

include_package_data = True
install_requires =
    numpy
    scipy
    matplotlib

[options.packages.find]
where=src

[flake8]
max-line-length = 100