[metadata]
name = biosim

version = attr: biosim.__version__
author = attr: biosim.__author__
author_email = attr: biosim.__email__

description = Simulate a simplified ecosystem of different animal species on an island.
long_description = file: README.txt
long_description_content_type = text

url = https://github.com/hallvardnmbu/BioSim

license = MIT License

classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.11
install_requires =
    numpy
    matplotlib
    PyQt5
    perlin_noise

package_dir =
    = src
packages = find:

scripts =
    examples/example_different_parameters.py
    examples/example_gui.py
    examples/example_save_movie.py
    examples/example_simulation.py

[options.packages.find]
where = src

[flake8]
max-line-length = 100